--- a/styles/globals.css
+++ b/styles/globals.css
@@ -65,3 +65,14 @@ h1 {
 .btn-icon svg {
   margin-right: 5px;
 }
+
+.center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
+.center h1 {
+  margin: 0;
+}
